// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders external links correctly 1`] = `
<styled.a
  clean={false}
  href="/url"
  size="unset"
>
  Text
</styled.a>
`;

exports[`<Link /> renders internal links correctly 1`] = `
<Styled(Link)
  clean={false}
  size="unset"
  to="/url"
>
  Text
</Styled(Link)>
`;
